# framework

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
configs/: config.yaml
configs/backbone/: dinov3_dpt.yaml  embedding.yaml  resnet18.yaml  small_dinov3_dpt.yaml  smp_dpt.yaml  smp_unet.yaml
configs/callbacks/: augmented.yaml  default.yaml  minimal.yaml  none.yaml
configs/dataloader/: debug.yaml  default.yaml  performance.yaml
configs/distillation/: kl.yaml  none.yaml
configs/experiment/: arcface_smoke.yaml  classification_smoke.yaml  contrastive_smoke.yaml  crop.yaml  debug.yaml  embeddings_smoke.yaml  imagereward_ranking.yaml  m2_smoke.yaml  pet_multitask.yaml  pet_rotation.yaml  ranking_smoke.yaml  sample_log_smoke.yaml  segmentation_smoke.yaml
configs/export/: all.yaml  onnx.yaml  tensorrt.yaml  torchscript.yaml
configs/hydra/: default.yaml
configs/logger/: clearml.yaml  none.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/scheduler/: cosine.yaml  none.yaml  onecycle.yaml  plateau.yaml  step.yaml
configs/trainer/: cpu_smoke.yaml  default.yaml  profile.yaml
configs/transforms/: augmented.yaml  crop.yaml  default.yaml  identity.yaml  multiview.yaml  multiview_shared.yaml  rotation.yaml
scripts/: bench_dataloader.py  generate_smoke_data.py  prepare_imagereward.py  prepare_pet.py
src/: __init__.py
src/callbacks/: __init__.py  batch_transform.py  criterion_schedule.py  dataset_stats.py  ema.py  ema_checkpoint.py  freeze.py  metric_summary.py  model_summary.py  progress_bar.py  registry.py  sample_log.py
src/composition/: __init__.py  wiring.py
src/config/: __init__.py  export.py  resolvers.py  schema.py
src/core/: __init__.py  constants.py  entities.py  enums.py  instantiate.py  keys.py  metric_key.py  plotting.py  ports.py  registry.py  runtime.py  taxonomy.py
src/data/: __init__.py  bindings.py  cache.py  codecs.py  collate.py  datamodule.py  dataset.py  encoders.py  loaders.py  (+5 more)
tests/: conftest.py  test_arcface.py  test_batch_transforms.py  test_callbacks.py  test_composition.py  test_config.py  test_contrastive.py  test_core.py  test_data.py  test_dataset_statistics.py  test_export.py  test_export_wiring.py  test_focal.py  test_instantiate.py  test_loggers.py  test_metric_key.py  test_metrics.py  test_models.py  test_progress_bar.py  test_ranking.py  test_reporting.py  test_run.py  test_sample_log.py  test_tasks.py  test_training.py  test_visualization.py
(+179 files in other folders)
