[project]
name = "framework2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentationsx>=2.3.1",
    "clearml>=2.1.8",
    "hydra-core>=1.3.2",
    "lightning>=2.6.5",
    "numkong==7.4.5",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxsim>=0.6.5",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "scikit-multilearn>=0.2.0",
    "segmentation-models-pytorch>=0.5.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.17.0",
    "ipykernel>=7.2.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.typos.default.extend-words]
# ML abbreviations that typos misidentifies as misspellings
fpr = "fpr"
mis = "mis"
FPR = "FPR"
NCE = "NCE"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"


[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
